fixed spacing on mobile to 4px from text, instead of 2px

--- a/packages/augur-ui/src/modules/common/switch-labels-group.styles.less
+++ b/packages/augur-ui/src/modules/common/switch-labels-group.styles.less
@@ -10,7 +10,7 @@
   }
 }
 
-.SwitchLabelsGroup__label {
+.Label {
   .mono-11;
 
   color: @color-shadow-text;
@@ -66,14 +66,14 @@
 
       &::after {
         bottom: unset;
-        margin-top: 2px;
+        margin-top: 4px;
         top: 100%;
       }
     }
   }
 }
 
-.SwitchLabelsGroup_open {
+.Open {
   &.active {
     > span {
       &::after {
@@ -83,7 +83,7 @@
   }
 }
 
-.SwitchLabelsGroup_reporting {
+.Reporting {
   &.active {
     > span {
       &::after {
@@ -93,7 +93,7 @@
   }
 }
 
-.SwitchLabelsGroup_resolved {
+.Resolved {
   &.active {
     > span {
       &::after {
